[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/menu/elements/Separator.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/menu/layouts/empty_layout.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/menu/elements/ListButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/menu/layouts/layout_08.gd" type="Script" id=4]

[node name="LayoutContainer" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="TopPlaceHolder" parent="." index="0"]
margin_bottom = 156.0

[node name="ListButton" parent="." index="1" instance=ExtResource( 3 )]
margin_top = 156.0
margin_bottom = 196.0

[node name="Left" parent="ListButton/HBoxContainer" index="0"]
margin_right = 473.0
text = "  CHROMATIC ABERRATION:"

[node name="Right" parent="ListButton/HBoxContainer" index="1"]
margin_left = 477.0
text = "ACTIVATED  "

[node name="Seperator" parent="." index="2" instance=ExtResource( 1 )]
margin_top = 196.0
margin_bottom = 204.0

[node name="ListButton2" parent="." index="3" instance=ExtResource( 3 )]
margin_top = 204.0
margin_bottom = 244.0

[node name="Left" parent="ListButton2/HBoxContainer" index="0"]
margin_right = 459.0
text = "  DEPTH OF FIELD:"

[node name="Right" parent="ListButton2/HBoxContainer" index="1"]
margin_left = 463.0
text = "  ACTIVATED  "

[node name="Seperator3" parent="." index="4" instance=ExtResource( 1 )]
margin_top = 244.0
margin_bottom = 252.0

[node name="ListButton4" parent="." index="5" instance=ExtResource( 3 )]
margin_top = 252.0
margin_bottom = 292.0

[node name="Left" parent="ListButton4/HBoxContainer" index="0"]
margin_right = 459.0
text = "  MOTION BLUR:"

[node name="Right" parent="ListButton4/HBoxContainer" index="1"]
margin_left = 463.0
text = "  ACTIVATED  "

[node name="Seperator4" parent="." index="6" instance=ExtResource( 1 )]
margin_top = 292.0
margin_bottom = 300.0

[node name="ListButton5" parent="." index="7" instance=ExtResource( 3 )]
margin_top = 300.0
margin_bottom = 340.0

[node name="Left" parent="ListButton5/HBoxContainer" index="0"]
margin_right = 550.0
text = "  SCREEN SHAKE: "

[node name="Right" parent="ListButton5/HBoxContainer" index="1"]
margin_left = 554.0
text = "  50%  "

[node name="Seperator2" parent="." index="8" instance=ExtResource( 1 )]
margin_top = 340.0
margin_bottom = 380.0
rect_min_size = Vector2( 0, 40 )

[node name="ListButton3" parent="." index="9" instance=ExtResource( 3 )]
margin_top = 380.0
margin_bottom = 420.0

[node name="Left" parent="ListButton3/HBoxContainer" index="0"]
text = "  GO BACK"

[node name="BottomPlaceHolder" parent="." index="10"]
margin_top = 420.0

[editable path="ListButton"]
[editable path="Seperator"]
[editable path="ListButton2"]
[editable path="Seperator3"]
[editable path="ListButton4"]
[editable path="Seperator4"]
[editable path="ListButton5"]
[editable path="ListButton3"]
